--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,6 +3,11 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
+
+	<welcome-file-list>
+	    <welcome-file>FibonacciInput.html</welcome-file>
+	</welcome-file-list>
+
 	<servlet>
 		<servlet-name>fibonacci</servlet-name>
 		<servlet-class>com.harvey.solve.servlet.FibonacciServlet</servlet-class>
