--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="WebApp_ID" version="3.0">
-
-	<welcome-file-list>
-	    <welcome-file>FibonacciInput.html</welcome-file>
-	</welcome-file-list>
-
-	<servlet>
-		<servlet-name>fibonacci</servlet-name>
-		<servlet-class>com.harvey.solve.servlet.FibonacciServlet</servlet-class>
-	</servlet>
-
-	<servlet>
-		<servlet-name>joseph</servlet-name>
-		<servlet-class>com.harvey.solve.servlet.JosephServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>fibonacci</servlet-name>
-		<url-pattern>/FibonacciResult</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>joseph</servlet-name>
-		<url-pattern>/JosephResult</url-pattern>
-	</servlet-mapping>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <welcome-file-list>
+    <welcome-file>FibonacciInput.html</welcome-file>
+  </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>fibonacci</servlet-name>
+    <servlet-class>com.harvey.solve.servlet.FibonacciServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>joseph</servlet-name>
+    <servlet-class>com.harvey.solve.servlet.JosephServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>newjoseph</servlet-name>
+    <servlet-class>com.harvey.solve.servlet.NewJosephServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>fibonacci</servlet-name>
+    <url-pattern>/FibonacciResult</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>joseph</servlet-name>
+    <url-pattern>/JosephResult</url-pattern>
+  </servlet-mapping>
+  
+   <servlet-mapping>
+    <servlet-name>newjoseph</servlet-name>
+    <url-pattern>/NewJosephServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
