--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,35 +3,28 @@
   <welcome-file-list>
     <welcome-file>FibonacciInput.html</welcome-file>
   </welcome-file-list>
-  
   <servlet>
     <servlet-name>fibonacci</servlet-name>
-    <servlet-class>com.harvey.solve.servlet.FibonacciServlet</servlet-class>
+    <servlet-class>org.harvey.solve.servlet.FibonacciServlet</servlet-class>
   </servlet>
-  
   <servlet>
     <servlet-name>joseph</servlet-name>
-    <servlet-class>com.harvey.solve.servlet.JosephServlet</servlet-class>
+    <servlet-class>org.harvey.solve.servlet.JosephServlet</servlet-class>
   </servlet>
-  
   <servlet>
     <servlet-name>newjoseph</servlet-name>
-    <servlet-class>com.harvey.solve.servlet.NewJosephServlet</servlet-class>
+    <servlet-class>org.harvey.solve.servlet.NewJosephServlet</servlet-class>
   </servlet>
-  
   <servlet-mapping>
     <servlet-name>fibonacci</servlet-name>
     <url-pattern>/FibonacciResult</url-pattern>
   </servlet-mapping>
-  
   <servlet-mapping>
     <servlet-name>joseph</servlet-name>
     <url-pattern>/JosephResult</url-pattern>
   </servlet-mapping>
-  
-   <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>newjoseph</servlet-name>
     <url-pattern>/NewJosephServlet</url-pattern>
   </servlet-mapping>
-  
 </web-app>
