Implement Joseph problem service by Spring MVC instead of Servlet.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,16 +15,31 @@
     <servlet-name>newjoseph</servlet-name>
     <servlet-class>org.harvey.solve.servlet.NewJosephServlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>fibonacci</servlet-name>
-    <url-pattern>/FibonacciResult</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>joseph</servlet-name>
-    <url-pattern>/JosephResult</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>newjoseph</servlet-name>
-    <url-pattern>/NewJosephServlet</url-pattern>
-  </servlet-mapping>
+  <servlet>
+	    <servlet-name>springmvc</servlet-name>
+	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	    <init-param>
+	          <param-name>contextConfigLocation</param-name>
+	          <param-value>classpath:springmvc-servlet.xml</param-value>
+	    </init-param>
+	    <!-- <load-on-startup>1</load-on-startup> -->
+	</servlet>
+	
+	<servlet-mapping>
+	    <servlet-name>springmvc</servlet-name>
+	    <url-pattern>/</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+	  	<servlet-name>fibonacci</servlet-name>
+	    <url-pattern>/FibonacciResult</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>joseph</servlet-name>
+	    <url-pattern>/JosephResult</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>newjoseph</servlet-name>
+	    <url-pattern>/NewJosephServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
