--- a/pom.xml
+++ b/pom.xml
@@ -161,5 +161,11 @@
         <artifactId>el-api</artifactId>
         <version>2.2</version>
     </dependency>
+    <dependency>    
+		<groupId>org.mockito</groupId>    
+		<artifactId>mockito-all</artifactId>    
+		<version>1.8.5</version>    
+		<scope>test</scope>    
+	</dependency> 
   </dependencies>
 </project>
